feat(core): log active vectors.* runtime toggles at startup (T4.13)
vectors.maxBits / vectors.useVectorFMA / vectors.useScalarFMA /
vectors.forceScalar were applied silently — a missing
--add-modules=jdk.incubator.vector or a typo in the property name produced
a SIMD-to-scalar downgrade with no operator-visible signal.
VectorizationProvider now emits one INFO line at provider-selection time
listing the resolved provider, MAX_BITS, PREFERRED_BITS, FMA capabilities,
and every -Dvectors.* override that was actually applied (or "defaults" if
none). buildToggleSummary is package-visible so the regression test can
inspect the exact string without installing a custom logging handler.